[package]
name = "alloy-ccip-read"
version = "0.2.0"
authors = ["Lev Lymarenko its@llev.me"]
license = "MIT"
edition = "2018"
readme = "./README.md"
repository = "https://github.com/sevenzing/alloy-ccip-read"
homepage = "https://github.com/sevenzing/alloy-ccip-read"
keywords = ["ens", "alloy", "ccip-read", "offchain-resolver", "l2-resolver"]
description = """
CCIP-Reader for alloy-rs
"""
exclude = [
    ".github",
]

[dependencies]
# Tracing
tracing = "0.1.40"

# Error handling
thiserror = { version = "1.0.50", default-features = false }

# Serialization/deserialization
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }

# HTTP
reqwest = {version = "0.12", features = ["json"]}

# Async
async-recursion = "1.0.5"
async-trait = { version = "0.1.74", default-features = false }

# Alloy
alloy = { version = "0.1", features = ["full", "json-rpc"] }
futures-util = "0.3.29"
anyhow = "1.0.75"
tracing-subscriber = "0.3.18"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
alloy = { version = "0.1", features = ["full"] }
anyhow = "1.0.75"
pretty_assertions = "1.4.1"
rstest = "0.23.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }
